Fix legend fields label spacing

--- a/src/kibana/plugins/visualize/editor/styles/editor.less
+++ b/src/kibana/plugins/visualize/editor/styles/editor.less
@@ -155,6 +155,10 @@
 
       &-growing {
         .flex(2 0 0);
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        margin-bottom: 0;
       }
 
       &-description {
